Prevent distortion of photos by adjusting the size relative to the screen

--- a/app/assets/stylesheets/listing-show/listing-show.scss
+++ b/app/assets/stylesheets/listing-show/listing-show.scss
@@ -175,7 +175,6 @@
 
 .listing-photos-container {
   padding-bottom: 15px;
-
 }
 
 img {
@@ -183,8 +182,8 @@ img {
 }
 
 .row {
-  // max-height: 100%;
-  max-height: 338px;
+  max-height: 100%;
+  // max-height: 338px;
   display: flex;
 }
 
